--- a/java/testdata/java11_nonroot_debian10_libharfbuzz.yaml
+++ b/java/testdata/java11_nonroot_debian10_libharfbuzz.yaml
@@ -1,9 +1,8 @@
 schemaVersion: "1.0.0"
 commandTests:
   - name: check_libharfbuzz
-    # This is a bit ugly because structure tests can't test the default entrypoint yet.
     command: ["/usr/bin/java",
               "-cp",
               "/app/distroless/java/check_libharfbuzz_java11_nonroot_debian10.binary.jar:/app/distroless/java/check_libharfbuzz_java11_nonroot_debian10.binary",
               "testdata.CheckLibharfbuzz"]
-    expectedOutput: ['^\d+ fonts loaded']
+    expectedOutput: ['^\d+ fonts available']
